--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -1,1 +1,34 @@
 @import '~bootstrap/scss/bootstrap';
+$primary-color: #333333;
+$secondary-color: #eaeaea;
+$primary-font: Verdana;
+$secondary-font: Serif;
+
+body {
+  background: $secondary-color;
+  color: $primary-color;
+  font-family: 'Nunito', sans-serif;
+}
+
+nav {
+  background-color: $primary-color;
+  font-size: 1.5rem;
+  height: 6rem;
+  margin: 1px 0;
+}
+
+.navbar-brand {
+  background-color: $secondary-color;
+  border-radius: 15px 50px;
+  color: $primary-color;
+  font-family: $primary-font;
+  font-size: 2rem;
+  font-weight: bold;
+  height: 95px;
+  padding: 20px 15px;
+}
+
+.btn {
+  background-color: $secondary-color;
+  color: $primary-color;
+}
