Created api request/event handle for INDEX uploads. Uploads as cards
  - AJAX request in api.js for getUploads
  - Made promise in events.js for onGetUploads
  - Added meta data to handlebars script
  - Added bootstrap column responsiveness to cards
  - Created upload button to trigger index uploads

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -8,6 +8,7 @@ body {
   background: $secondary-color;
   color: $primary-color;
   font-family: 'Nunito', sans-serif;
+  margin: 0;
 }
 
 nav {
@@ -31,4 +32,11 @@ nav {
 .btn {
   background-color: $secondary-color;
   color: $primary-color;
+}
+
+.card-img-top {
+  height: 200px;
+  margin-top: 8px;
+  vertical-align: middle;
+  width: 100%;
 }
