--- a/assets/scripts/templates/get-uploads.handlebars
+++ b/assets/scripts/templates/get-uploads.handlebars
@@ -1,14 +1,17 @@
 {{#each uploads as |upload|}}
-  <div class="card" id="upload-card" style="width: 18rem;">
-    <img class="card-img-top" src="{{upload.url}}" alt="Card image cap">
-    <div class="card-body">
-      <section data-id="{{upload.id}}">
-        <h3 class="card-title" data-id="{{upload.id}}">{{upload.title}}</h3>
-        <form class="edit-title" data-id="{{upload.id}}">
-          <input type="string" name="title" placeholder="title">
-          <button type="submit" class="btn btn-default">Edit</button>
-        </form>
-      </section>
+  <div class="col-sm-6 col-md-4 col-xl-3">
+    <div class="card" style="width: 15rem;">
+      <img class="card-img-top" src="{{upload.url}}" alt="Card image cap">
+      <div class="card-body">
+        <section data-id="{{upload.id}}">
+          <h6 class="card-title" data-id="{{upload.id}}">{{upload.title}}</h6>
+          <p class="card-createDate">created on:{{upload.createdAt}}</p>
+          <p class="card-updateDate">updated on:{{upload.updatedAt}}</p>
+          <form class="edit-title" data-id="{{upload.id}}">
+            <button type="submit" class="btn btn-default">Edit</button>
+          </form>
+        </section>
+      </div>
     </div>
   </div>
 {{/each}}
