--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -1,13 +1,13 @@
 @import '~bootstrap/scss/bootstrap';
 $primary-color: #333333;
 $secondary-color: #eaeaea;
-$primary-font: Verdana;
-$secondary-font: Serif;
+$primary-font: 'Aleo', sans-serif;
+$secondary-font: 'Paytone One', sans-serif;
 
 body {
   background: $secondary-color;
   color: $primary-color;
-  font-family: 'Nunito', sans-serif;
+  font-family: $primary-font;
   margin: 0;
 }
 
@@ -22,7 +22,7 @@ nav {
   background-color: $secondary-color;
   border-radius: 15px 50px;
   color: $primary-color;
-  font-family: $primary-font;
+  font-family: $secondary-font;
   font-size: 2rem;
   font-weight: bold;
   height: 95px;
