--- a/assets/scripts/templates/get-uploads.handlebars
+++ b/assets/scripts/templates/get-uploads.handlebars
@@ -12,13 +12,13 @@
           <p class="card-updateDate">updated on:{{upload.updatedAt}}</p>
           <p class="card-tag">tags: {{upload.tag}}</p>
           <form class="edit-title" data-id="{{upload._id}}">
-            <button type="submit" class="btn btn-default" data-toggle="modal" data-target="#edit-upload-modal">Edit</button>
+            <button type="submit" class="btn btn-default" data-toggle="modal" data-target="#edit-upload-modal{{upload._id}}">Edit</button>
           </form>
           <button id='delete'>Delete</button>
         </section>
       </div>
-
-      <div class="modal fade" id="edit-upload-modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+      <div class="modal-hider">
+      <div class="modal fade" id="edit-upload-modal{{upload._id}}" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
         <div class="modal-dialog" role="document">
           <form id="edit-upload-modal-form" class="modal-content">
             <div class="modal-header text-center">
@@ -53,6 +53,7 @@
           </form>
         </div>
       </div>
+    </div>
 
     </div>
   </div>
