added style. cards are evenly spaced and sized

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -34,9 +34,24 @@ nav {
   color: $primary-color;
 }
 
+.card {
+  margin: 0;
+  padding: 0;
+  width: 20rem;
+}
+
+.card-body {
+  line-height: normal;
+  width: 20rem;
+}
+
 .card-img-top {
-  height: 200px;
+  height: 20rem;
   margin-top: 8px;
   vertical-align: middle;
-  width: 100%;
+  width: 20rem;
+}
+
+.card-title {
+  font-size: 2rem;
 }
