--- a/assets/scripts/templates/get-uploads.handlebars
+++ b/assets/scripts/templates/get-uploads.handlebars
@@ -1,15 +1,15 @@
 {{#each uploads as |upload|}}
 
-  <div class="col-sm-6 col-md-4 col-xl-3" data-id="{{upload._id}}">
-    <div class="card" style="width: 15rem;">
+  <div  data-id="{{upload._id}}">
+    <div class="card">
       <img class="card-img-top" data-url="{{upload.url}}" src="{{upload.url}}" alt="Card image cap">
 
       <div class="card-body">
 
         <section data-id="{{upload._id}}">
           <h6 class="card-title" data-id="{{upload._id}}">{{upload.title}}</h6>
-          <p class="card-createDate">created on:{{upload.createdAt}}</p>
-          <p class="card-updateDate">updated on:{{upload.updatedAt}}</p>
+          <p class="card-createDate">created on: {{upload.createdAt}}</p>
+          <p class="card-updateDate">updated on: {{upload.updatedAt}}</p>
           <p class="card-tag">tags: {{upload.tag}}</p>
           <form class="edit-title" data-id="{{upload._id}}">
             <button type="submit" class="btn btn-default" data-toggle="modal" data-target="#edit-upload-modal{{upload._id}}">Edit</button>
