--- a/assets/scripts/templates/get-all-uploads.handlebars
+++ b/assets/scripts/templates/get-all-uploads.handlebars
@@ -1,7 +1,7 @@
 {{#each uploads as |upload|}}
 
-  <div class="col-sm-6 col-md-4 col-xl-3" data-id="{{upload._id}}">
-    <div class="card" style="width: 15rem;">
+  <div data-id="{{upload._id}}">
+    <div class="card">
       <img class="card-img-top" data-url="{{upload.url}}" src="{{upload.url}}" alt="Card image cap">
 
       <div class="card-body">
