--- a/assets/scripts/templates/get-uploads.handlebars
+++ b/assets/scripts/templates/get-uploads.handlebars
@@ -1,6 +1,6 @@
 {{#each uploads as |upload|}}
 
-  <div  data-id="{{upload._id}}">
+  <div data-id="{{upload._id}}">
     <div class="card">
       <img class="card-img-top" data-url="{{upload.url}}" src="{{upload.url}}" alt="Card image cap">
 
@@ -11,16 +11,17 @@
           <p class="card-createDate">created on: {{upload.createdAt}}</p>
           <p class="card-updateDate">updated on: {{upload.updatedAt}}</p>
           <p class="card-tag">tags: {{upload.tag}}</p>
-          <form class="edit-title" data-id="{{upload._id}}">
-            <button type="submit" class="btn btn-default" data-toggle="modal" data-target="#edit-upload-modal{{upload._id}}">Edit</button>
-          </form>
-          <button id='delete'>Delete</button>
+          <hr class="p-2">
+            <button type="click" class="btn btn-secondary" data-toggle="modal" data-target="#edit-upload-modal{{upload._id}}">Edit</button>
+
+          <button class="delete btn btn-secondary">Delete</button>
         </section>
       </div>
       <div class="modal-hider">
       <div class="modal fade" id="edit-upload-modal{{upload._id}}" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
         <div class="modal-dialog" role="document">
-          <form id="edit-upload-modal-form" class="modal-content">
+<!-- edit-upload-modal-form -->
+          <form class="modal-content edit-upload-modal-form">
             <div class="modal-header text-center">
               <h4 class="modal-title w-100 font-weight-bold">Edit Image Details</h4>
               <button type="button" class="close" data-dismiss="modal" aria-label="Close">
@@ -30,7 +31,8 @@
             <div class="modal-body mx-3">
               <div class="md-form mb-5">
                 <p class="fas fa-envelope prefix grey-text"></p>
-                <input type="title" id="edit-upload-title" class="form-control validate" name="upload[title]" autocomplete="off">
+                <!-- changed class to edit-upload-title -->
+                <input type="title" class="edit-upload-title form-control validate" placeholder="{{upload.title}}" name="upload[title]" autocomplete="off"/>
                 <label data-error="wrong" data-success="right" for="upload-title">Title</label>
               </div>
               <select name="upload[tag]">
