--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -8,25 +8,17 @@ body {
   background: $secondary-color;
   color: $primary-color;
   font-family: $primary-font;
-  // margin: 0;
 }
 
 nav {
   background-color: $primary-color;
   font-size: 1.5rem;
-  height: 6rem;
-  // margin: 1px 0;
 }
 
 .navbar-brand {
-  background-color: $secondary-color;
-  border-radius: 15px 50px;
-  color: $primary-color;
-  font-family: $secondary-font;
-  font-size: 2rem;
-  font-weight: bold;
-  height: 95px;
-  padding: 20px 15px;
+background-color: $secondary-color;
+border-radius: 15px 50px;
+padding: .5rem 2rem;
 }
 
 .btn {
