--- a/assets/scripts/templates/get-uploads.handlebars
+++ b/assets/scripts/templates/get-uploads.handlebars
@@ -1,7 +1,7 @@
 {{#each uploads as |upload|}}
 
   <div data-id="{{upload._id}}">
-    <div class="card">
+    <div class="card" style="width: 18rem; margin-top: 2rem;">
       <img class="card-img-top" data-url="{{upload.url}}" src="{{upload.url}}" alt="Card image cap">
 
       <div class="card-body">
